--- a/index.html
+++ b/index.html
@@ -905,15 +905,15 @@
                 </div>
                 <div class="hero-stats">
                     <div class="hero-stat">
-                        <div class="hero-stat-number">4</div>
-                        <div class="hero-stat-text">Premium Server</div>
+                        <div class="hero-stat-number">1</div>
+                        <div class="hero-stat-text">Premium Root Server</div>
                     </div>
                     <div class="hero-stat">
-                        <div class="hero-stat-number">3000+</div>
+                        <div class="hero-stat-number">60+</div>
                         <div class="hero-stat-text">Community Mitglieder</div>
                     </div>
                     <div class="hero-stat">
-                        <div class="hero-stat-number">24/7</div>
+                        <div class="hero-stat-number">Verlässlicher</div>
                         <div class="hero-stat-text">Online Support</div>
                     </div>
                 </div>
@@ -932,20 +932,20 @@
         <div class="container">
             <div class="section-header">
                 <h2 class="section-title">Unsere Server</h2>
-                <p class="section-subtitle">Entdecke unsere vier maßgeschneiderten Server mit einzigartigen Gaming-Erlebnissen, die für leidenschaftliche Spieler entwickelt wurden.</p>
+                <p class="section-subtitle">Entdecke unsere vier Erlebnissvollen Server mit einzigartigen Gaming-Erlebnissen, die für leidenschaftliche Spieler entwickelt wurden.</p>
             </div>
             <div class="server-grid">
                 <div class="server-card">
                     <div class="server-img">
-                        <img src="/api/placeholder/500/300" alt="Minecraft RP Server">
+                        <img src="images/Travelling (1).jpg" alt="Minecraft RP Server">
                     </div>
                     <div class="server-content">
-                        <span class="server-tag">Minecraft</span>
-                        <h3>Minecraft RP</h3>
+                        <span class="server-tag">Minecraft RP</span>
+                        <h3>Epoches of Time</h3>
                         <p>Tauche ein in ein Immersives und Vielseitig Geprägtes Rollenspiel Projekt. Baue eigene Nationen auf, und Werde Meister der Industrie.</p>
                         <div class="server-stats">
                             <div class="server-stat">
-                                <div class="server-stat-number">100+</div>
+                                <div class="server-stat-number">60+</div>
                                 <div class="server-stat-text">Spieler</div>
                             </div>
                             <div class="server-stat">
@@ -953,7 +953,7 @@
                                 <div class="server-stat-text">Online</div>
                             </div>
                             <div class="server-stat">
-                                <div class="server-stat-number">45+</div>
+                                <div class="server-stat-number">50+</div>
                                 <div class="server-stat-text">Mods</div>
                             </div>
                         </div>
