--- a/index.html
+++ b/index.html
@@ -937,7 +937,7 @@
             <div class="server-grid">
                 <div class="server-card">
                     <div class="server-img">
-                        <img src="images/Travelling (1).jpg" alt="Minecraft RP Server">
+                        <img src="https://github.com/AlyxIsMyLife/glntestnet/blob/images/Travelling%20(1).jpg" alt="Minecraft RP Server">
                     </div>
                     <div class="server-content">
                         <span class="server-tag">Minecraft RP</span>
