--- a/index.html
+++ b/index.html
@@ -937,7 +937,7 @@
             <div class="server-grid">
                 <div class="server-card">
                     <div class="server-img">
-                        <img src="https://github.com/AlyxIsMyLife/glntestnet/blob/images/Travelling%20(1).jpg" alt="Minecraft RP Server">
+                        <img src="https://github.com/AlyxIsMyLife/glntestnet/blob/images/Travelling%20(1).jpg" alt="">
                     </div>
                     <div class="server-content">
                         <span class="server-tag">Minecraft RP</span>
@@ -969,19 +969,19 @@
                         <p>Realistische militärische Simulation mit taktischem Gameplay. Strukturierte Operationen und teamorientiertes Spielen in einer authentischen Kampfumgebung.</p>
                         <div class="server-stats">
                             <div class="server-stat">
-                                <div class="server-stat-number">80+</div>
+                                <div class="server-stat-number">0</div>
                                 <div class="server-stat-text">Spieler</div>
                             </div>
                             <div class="server-stat">
-                                <div class="server-stat-number">100</div>
+                                <div class="server-stat-number">0</div>
                                 <div class="server-stat-text">Slots</div>
                             </div>
                             <div class="server-stat">
-                                <div class="server-stat-number">15+</div>
+                                <div class="server-stat-number">0</div>
                                 <div class="server-stat-text">Maps</div>
                             </div>
                         </div>
-                        <a href="#" class="server-btn">Server betreten</a>
+                        <a href="#" class="server-btn">Server in Arbeit</a>
                     </div>
                 </div>
                 <div class="server-card">
@@ -994,19 +994,19 @@
                         <p>Dynamisches städtisches Rollenspiel. Wähle deinen Beruf, interagiere mit anderen Spielern und erschaffe deine Geschichte in einer lebendigen Stadt.</p>
                         <div class="server-stats">
                             <div class="server-stat">
-                                <div class="server-stat-number">120+</div>
+                                <div class="server-stat-number">0</div>
                                 <div class="server-stat-text">Spieler</div>
                             </div>
                             <div class="server-stat">
-                                <div class="server-stat-number">50+</div>
+                                <div class="server-stat-number">0</div>
                                 <div class="server-stat-text">Jobs</div>
                             </div>
                             <div class="server-stat">
-                                <div class="server-stat-number">30+</div>
+                                <div class="server-stat-number">0</div>
                                 <div class="server-stat-text">Addons</div>
                             </div>
                         </div>
-                        <a href="#" class="server-btn">Server betreten</a>
+                        <a href="#" class="server-btn">Server in Arbeit</a>
                     </div>
                 </div>
                 <div class="server-card">
@@ -1014,24 +1014,24 @@
                         <img src="/api/placeholder/500/300" alt="Arma 3 Server">
                     </div>
                     <div class="server-content">
-                        <span class="server-tag">Arma 3</span>
-                        <h3>Arma 3 Tactical</h3>
+                        <span class="server-tag">Arma 3 RP</span>
+                        <h3>Arma 3 MilSim</h3>
                         <p>Hochgradig modifizierte Arma 3 Umgebung mit koordinierten Missionen. Stelle deine militärischen Fähigkeiten auf die Probe.</p>
                         <div class="server-stats">
                             <div class="server-stat">
-                                <div class="server-stat-number">60+</div>
+                                <div class="server-stat-number">0</div>
                                 <div class="server-stat-text">Spieler</div>
                             </div>
                             <div class="server-stat">
-                                <div class="server-stat-number">100+</div>
+                                <div class="server-stat-number">0</div>
                                 <div class="server-stat-text">Mods</div>
                             </div>
                             <div class="server-stat">
-                                <div class="server-stat-number">40+</div>
+                                <div class="server-stat-number">0</div>
                                 <div class="server-stat-text">Missionen</div>
                             </div>
                         </div>
-                        <a href="#" class="server-btn">Server betreten</a>
+                        <a href="#" class="server-btn">Server in Arbeit</a>
                     </div>
                 </div>
             </div>
@@ -1042,7 +1042,7 @@
         <div class="container feature-container">
             <div class="section-header">
                 <h2 class="section-title">Unsere Features</h2>
-                <p class="section-subtitle">Entdecke, was die Greyline Network von anderen Gaming-Communities unterscheidet und warum unsere Spieler immer wieder zurückkehren.</p>
+                <p class="section-subtitle">Entdecke, was das Greyline Network von anderen Gaming-Communities unterscheidet und warum unsere Spieler immer wieder zurückkehren.</p>
             </div>
             <div class="feature-list">
                 <div class="feature-item">
@@ -1106,7 +1106,7 @@
                                 <polyline points="22 4 12 14.01 9 11.01"></polyline>
                             </svg>
                         </div>
-                        <p>Aktiver Discord mit über 3000 Mitgliedern</p>
+                        <p>Aktiver Discord mit über 60 Mitgliedern</p>
                     </div>
                     <div class="community-feature">
                         <div class="community-feature-icon">
@@ -1127,23 +1127,23 @@
                         <p>Entwicklerteam, das aktiv neue Features implementiert</p>
                     </div>
                 </div>
-                <a href="#" class="cta-button">Unseren Discord betreten</a>
+                <a href="https://discord.gg/nTxjzD7RZ8" class="cta-button">Unseren Discord betreten</a>
             </div>
             <div class="community-stats">
                 <div class="community-stat">
-                    <div class="community-stat-number">3000+</div>
+                    <div class="community-stat-number">60+</div>
                     <div class="community-stat-text">Community Mitglieder</div>
                 </div>
                 <div class="community-stat">
-                    <div class="community-stat-number">500+</div>
+                    <div class="community-stat-number">60+</div>
                     <div class="community-stat-text">Aktive Spieler täglich</div>
                 </div>
                 <div class="community-stat">
-                    <div class="community-stat-number">50+</div>
+                    <div class="community-stat-number">Freundliche</div>
                     <div class="community-stat-text">Staffmitglieder</div>
                 </div>
                 <div class="community-stat">
-                    <div class="community-stat-number">5+</div>
+                    <div class="community-stat-number">3+</div>
                     <div class="community-stat-text">Jahre Erfahrung</div>
                 </div>
             </div>
@@ -1158,12 +1158,12 @@
                 </div>
                 <p class="footer-text">Deine Premium Gaming-Community für Minecraft RP, Squad Milsim, GMod und Arma 3. Wir bieten qualitativ hochwertige Server und eine freundliche Community.</p>
                 <div class="footer-social">
-                    <a href="#" class="social-icon">
+                    <a href="https://discord.gg/nTxjzD7RZ8" class="social-icon">
                         <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                             <path d="M18 2h-3a5 5 0 0 0-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 0 1 1-1h3z"></path>
                         </svg>
                     </a>
-                    <a href="#" class="social-icon">
+                    <a href="https://www.youtube.com/channel/UCKNmZuqCXVRu19jL7v5Gmsw" class="social-icon">
                         <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                             <path d="M22.54 6.42a2.78 2.78 0 0 0-1.94-2C18.88 4 12 4 12 4s-6.88 0-8.6.46a2.78 2.78 0 0 0-1.94 2A29 29 0 0 0 1 11.75a29 29 0 0 0 .46 5.33A2.78 2.78 0 0 0 3.4 19c1.72.46 8.6.46 8.6.46s6.88 0 8.6-.46a2.78 2.78 0 0 0 1.94-2 29 29 0 0 0 .46-5.25 29 29 0 0 0-.46-5.33z"></path>
                             <polygon points="9.75 15.02 15.5 11.75 9.75 8.48 9.75 15.02"></polygon>
