--- a/index.html
+++ b/index.html
@@ -889,7 +889,7 @@
                     <li><a href="#community">Community</a></li>
                 </ul>
             </nav>
-            <a href="#" class="cta-button">Jetzt Mitspielen</a>
+            <a href="https://alyxismylife.github.io/GLNFORUM/" class="cta-button">Forum</a>
         </div>
     </header>
 
