--- a/index.html
+++ b/index.html
@@ -377,12 +377,12 @@
       timelineLine.style.backgroundColor = timelineColor;
 
       mainTitle.style.color = textColor;
-      mainTitle.style.fontFamily = `${customFont}, ${baseFontStack}`;
-      mainTitle.style.fontSize = `${baseSize * 3}px`;
+      mainTitle.style.fontFamily = ${customFont}, ${baseFontStack};
+      mainTitle.style.fontSize = ${baseSize * 3}px;
 
       subtitle.style.color = textColor;
-      subtitle.style.fontFamily = `${customFont}, ${baseFontStack}`;
-      subtitle.style.fontSize = `${baseSize * 1.5}px`;
+      subtitle.style.fontFamily = ${customFont}, ${baseFontStack};
+      subtitle.style.fontSize = ${baseSize * 1.5}px;
 
       cards.forEach(card => {
         card.style.backgroundColor = cardBackground;
@@ -391,34 +391,34 @@
 
       titles.forEach(title => {
         title.style.color = textColor;
-        title.style.fontFamily = `${customFont}, ${baseFontStack}`;
-        title.style.fontSize = `${baseSize * 1.375}px`;
+        title.style.fontFamily = ${customFont}, ${baseFontStack};
+        title.style.fontSize = ${baseSize * 1.375}px;
       });
 
       previews.forEach(preview => {
         preview.style.color = textColor;
-        preview.style.fontFamily = `${customFont}, ${baseFontStack}`;
-        preview.style.fontSize = `${baseSize}px`;
+        preview.style.fontFamily = ${customFont}, ${baseFontStack};
+        preview.style.fontSize = ${baseSize}px;
       });
 
       dates.forEach(date => {
         date.style.color = accentColor;
-        date.style.fontFamily = `${customFont}, ${baseFontStack}`;
-        date.style.fontSize = `${baseSize * 0.875}px`;
+        date.style.fontFamily = ${customFont}, ${baseFontStack};
+        date.style.fontSize = ${baseSize * 0.875}px;
       });
 
       categories.forEach(category => {
         category.style.backgroundColor = accentColor;
         category.style.color = cardBackground;
-        category.style.fontFamily = `${customFont}, ${baseFontStack}`;
-        category.style.fontSize = `${baseSize * 0.75}px`;
+        category.style.fontFamily = ${customFont}, ${baseFontStack};
+        category.style.fontSize = ${baseSize * 0.75}px;
       });
 
       details.forEach(detail => {
         detail.style.color = textColor;
         detail.style.borderTopColor = accentColor;
-        detail.style.fontFamily = `${customFont}, ${baseFontStack}`;
-        detail.style.fontSize = `${baseSize * 0.9375}px`;
+        detail.style.fontFamily = ${customFont}, ${baseFontStack};
+        detail.style.fontSize = ${baseSize * 0.9375}px;
       });
 
       dots.forEach(dot => {
