--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Historische Zeitleiste</title>
-  <script src="/_sdk/element_sdk.js"></script>
   <style>
     body {
       box-sizing: border-box;
@@ -22,6 +21,7 @@
     .container {
       min-height: 100%;
       padding: 48px 32px;
+      background-color: #f8f5f0;
     }
 
     .header {
@@ -34,12 +34,14 @@
       font-weight: bold;
       margin: 0 0 12px 0;
       letter-spacing: 1px;
+      color: #2c2416;
     }
 
     .subtitle {
       font-size: 24px;
       margin: 0;
       opacity: 0.8;
+      color: #2c2416;
     }
 
     .timeline-wrapper {
@@ -56,6 +58,7 @@
       bottom: 0;
       width: 4px;
       transform: translateX(-50%);
+      background-color: #8b6f47;
     }
 
     .timeline-event {
@@ -87,8 +90,9 @@
       padding: 24px;
       border-radius: 12px;
       box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-      border: 2px solid;
+      border: 2px solid #c4a574;
       transition: box-shadow 0.3s ease;
+      background-color: #ffffff;
     }
 
     .event-card:hover {
@@ -101,6 +105,7 @@
       margin-bottom: 8px;
       text-transform: uppercase;
       letter-spacing: 1px;
+      color: #c4a574;
     }
 
     .event-title {
@@ -108,6 +113,7 @@
       font-weight: bold;
       margin: 0 0 12px 0;
       line-height: 1.3;
+      color: #2c2416;
     }
 
     .event-category {
@@ -119,12 +125,15 @@
       margin-bottom: 12px;
       text-transform: uppercase;
       letter-spacing: 0.5px;
+      background-color: #c4a574;
+      color: #ffffff;
     }
 
     .event-preview {
       font-size: 16px;
       line-height: 1.6;
       margin: 0;
+      color: #2c2416;
     }
 
     .event-details {
@@ -141,9 +150,10 @@
 
     .event-details-content {
       padding-top: 16px;
-      border-top: 1px solid;
+      border-top: 1px solid #c4a574;
       font-size: 15px;
       line-height: 1.7;
+      color: #2c2416;
     }
 
     .expand-icon {
@@ -164,7 +174,8 @@
       width: 20px;
       height: 20px;
       border-radius: 50%;
-      border: 4px solid;
+      border: 4px solid #8b6f47;
+      background-color: #ffffff;
       z-index: 10;
     }
 
@@ -199,27 +210,20 @@
       }
     }
   </style>
-  <style>@view-transition { navigation: auto; }</style>
-  <script src="/_sdk/data_sdk.js" type="text/javascript"></script>
-  <script src="https://cdn.tailwindcss.com" type="text/javascript"></script>
  </head>
  <body>
   <div class="container">
    <div class="header">
-    <h1 class="title" id="timeline-title">Zweiter Weltkrieg</h1>
-    <p class="subtitle" id="timeline-subtitle">1939 - 1945</p>
+    <h1 class="title">Zweiter Weltkrieg</h1>
+    <p class="subtitle">1939 - 1945</p>
    </div>
    <div class="timeline-wrapper">
-    <div class="timeline-line" id="timeline-line"></div>
+    <div class="timeline-line"></div>
     <div class="timeline-event">
      <div class="event-content" onclick="toggleDetails(this)">
       <div class="event-card">
-       <div class="event-date">
-        1. September 1939
-       </div>
-       <div class="event-category category-political">
-        Politisch
-       </div>
+       <div class="event-date">1. September 1939</div>
+       <div class="event-category category-political">Politisch</div>
        <h3 class="event-title">Überfall auf Polen <span class="expand-icon">▼</span></h3>
        <p class="event-preview">Deutschland greift Polen an und löst damit den Zweiten Weltkrieg aus.</p>
        <div class="event-details">
@@ -234,12 +238,8 @@
     <div class="timeline-event">
      <div class="event-content" onclick="toggleDetails(this)">
       <div class="event-card">
-       <div class="event-date">
-        Januar 1942
-       </div>
-       <div class="event-category category-ideological">
-        Ideologisch
-       </div>
+       <div class="event-date">Januar 1942</div>
+       <div class="event-category category-ideological">Ideologisch</div>
        <h3 class="event-title">Wannsee-Konferenz <span class="expand-icon">▼</span></h3>
        <p class="event-preview">NS-Führung plant die systematische Vernichtung der europäischen Juden.</p>
        <div class="event-details">
@@ -254,12 +254,8 @@
     <div class="timeline-event">
      <div class="event-content" onclick="toggleDetails(this)">
       <div class="event-card">
-       <div class="event-date">
-        Februar 1943
-       </div>
-       <div class="event-category category-political">
-        Politisch
-       </div>
+       <div class="event-date">Februar 1943</div>
+       <div class="event-category category-political">Politisch</div>
        <h3 class="event-title">Schlacht von Stalingrad <span class="expand-icon">▼</span></h3>
        <p class="event-preview">Entscheidende Niederlage der Wehrmacht markiert Wendepunkt im Krieg.</p>
        <div class="event-details">
@@ -274,12 +270,8 @@
     <div class="timeline-event">
      <div class="event-content" onclick="toggleDetails(this)">
       <div class="event-card">
-       <div class="event-date">
-        6. Juni 1944
-       </div>
-       <div class="event-category category-political">
-        Politisch
-       </div>
+       <div class="event-date">6. Juni 1944</div>
+       <div class="event-category category-political">Politisch</div>
        <h3 class="event-title">D-Day - Landung in der Normandie <span class="expand-icon">▼</span></h3>
        <p class="event-preview">Alliierte Truppen eröffnen die Westfront in Europa.</p>
        <div class="event-details">
@@ -294,12 +286,8 @@
     <div class="timeline-event">
      <div class="event-content" onclick="toggleDetails(this)">
       <div class="event-card">
-       <div class="event-date">
-        20. Juli 1944
-       </div>
-       <div class="event-category category-social">
-        Gesellschaftlich
-       </div>
+       <div class="event-date">20. Juli 1944</div>
+       <div class="event-category category-social">Gesellschaftlich</div>
        <h3 class="event-title">Attentat auf Hitler <span class="expand-icon">▼</span></h3>
        <p class="event-preview">Deutscher Widerstand versucht, Hitler zu töten und den Krieg zu beenden.</p>
        <div class="event-details">
@@ -314,12 +302,8 @@
     <div class="timeline-event">
      <div class="event-content" onclick="toggleDetails(this)">
       <div class="event-card">
-       <div class="event-date">
-        8. Mai 1945
-       </div>
-       <div class="event-category category-political">
-        Politisch
-       </div>
+       <div class="event-date">8. Mai 1945</div>
+       <div class="event-category category-political">Politisch</div>
        <h3 class="event-title">Bedingungslose Kapitulation <span class="expand-icon">▼</span></h3>
        <p class="event-preview">Deutschland kapituliert - Ende des Krieges in Europa.</p>
        <div class="event-details">
@@ -334,99 +318,6 @@
    </div>
   </div>
   <script>
-    const defaultConfig = {
-      timeline_title: "Zweiter Weltkrieg",
-      timeline_subtitle: "1939 - 1945",
-      background_color: "#f8f5f0",
-      card_background: "#ffffff",
-      text_color: "#2c2416",
-      timeline_color: "#8b6f47",
-      accent_color: "#c4a574",
-      font_family: "Georgia",
-      font_size: 16
-    };
-
-    async function onConfigChange(config) {
-      const titleElement = document.getElementById('timeline-title');
-      const subtitleElement = document.getElementById('timeline-subtitle');
-      const container = document.querySelector('.container');
-      const timelineLine = document.getElementById('timeline-line');
-      const cards = document.querySelectorAll('.event-card');
-      const titles = document.querySelectorAll('.event-title');
-      const previews = document.querySelectorAll('.event-preview');
-      const dates = document.querySelectorAll('.event-date');
-      const categories = document.querySelectorAll('.event-category');
-      const details = document.querySelectorAll('.event-details-content');
-      const dots = document.querySelectorAll('.timeline-dot');
-      const mainTitle = document.querySelector('.title');
-      const subtitle = document.querySelector('.subtitle');
-
-      const backgroundColor = config.background_color || defaultConfig.background_color;
-      const cardBackground = config.card_background || defaultConfig.card_background;
-      const textColor = config.text_color || defaultConfig.text_color;
-      const timelineColor = config.timeline_color || defaultConfig.timeline_color;
-      const accentColor = config.accent_color || defaultConfig.accent_color;
-      const customFont = config.font_family || defaultConfig.font_family;
-      const baseSize = config.font_size || defaultConfig.font_size;
-      const baseFontStack = 'Georgia, serif';
-
-      titleElement.textContent = config.timeline_title || defaultConfig.timeline_title;
-      subtitleElement.textContent = config.timeline_subtitle || defaultConfig.timeline_subtitle;
-
-      container.style.backgroundColor = backgroundColor;
-      timelineLine.style.backgroundColor = timelineColor;
-
-      mainTitle.style.color = textColor;
-      mainTitle.style.fontFamily = ${customFont}, ${baseFontStack};
-      mainTitle.style.fontSize = ${baseSize * 3}px;
-
-      subtitle.style.color = textColor;
-      subtitle.style.fontFamily = ${customFont}, ${baseFontStack};
-      subtitle.style.fontSize = ${baseSize * 1.5}px;
-
-      cards.forEach(card => {
-        card.style.backgroundColor = cardBackground;
-        card.style.borderColor = accentColor;
-      });
-
-      titles.forEach(title => {
-        title.style.color = textColor;
-        title.style.fontFamily = ${customFont}, ${baseFontStack};
-        title.style.fontSize = ${baseSize * 1.375}px;
-      });
-
-      previews.forEach(preview => {
-        preview.style.color = textColor;
-        preview.style.fontFamily = ${customFont}, ${baseFontStack};
-        preview.style.fontSize = ${baseSize}px;
-      });
-
-      dates.forEach(date => {
-        date.style.color = accentColor;
-        date.style.fontFamily = ${customFont}, ${baseFontStack};
-        date.style.fontSize = ${baseSize * 0.875}px;
-      });
-
-      categories.forEach(category => {
-        category.style.backgroundColor = accentColor;
-        category.style.color = cardBackground;
-        category.style.fontFamily = ${customFont}, ${baseFontStack};
-        category.style.fontSize = ${baseSize * 0.75}px;
-      });
-
-      details.forEach(detail => {
-        detail.style.color = textColor;
-        detail.style.borderTopColor = accentColor;
-        detail.style.fontFamily = ${customFont}, ${baseFontStack};
-        detail.style.fontSize = ${baseSize * 0.9375}px;
-      });
-
-      dots.forEach(dot => {
-        dot.style.backgroundColor = cardBackground;
-        dot.style.borderColor = timelineColor;
-      });
-    }
-
     function toggleDetails(element) {
       const details = element.querySelector('.event-details');
       const icon = element.querySelector('.expand-icon');
@@ -434,79 +325,6 @@
       details.classList.toggle('expanded');
       icon.classList.toggle('rotated');
     }
-
-    if (window.elementSdk) {
-      window.elementSdk.init({
-        defaultConfig,
-        onConfigChange,
-        mapToCapabilities: (config) => ({
-          recolorables: [
-            {
-              get: () => config.background_color || defaultConfig.background_color,
-              set: (value) => {
-                config.background_color = value;
-                window.elementSdk.setConfig({ background_color: value });
-              }
-            },
-            {
-              get: () => config.card_background || defaultConfig.card_background,
-              set: (value) => {
-                config.card_background = value;
-                window.elementSdk.setConfig({ card_background: value });
-              }
-            },
-            {
-              get: () => config.text_color || defaultConfig.text_color,
-              set: (value) => {
-                config.text_color = value;
-                window.elementSdk.setConfig({ text_color: value });
-              }
-            },
-            {
-              get: () => config.timeline_color || defaultConfig.timeline_color,
-              set: (value) => {
-                config.timeline_color = value;
-                window.elementSdk.setConfig({ timeline_color: value });
-              }
-            },
-            {
-              get: () => config.accent_color || defaultConfig.accent_color,
-              set: (value) => {
-                config.accent_color = value;
-                window.elementSdk.setConfig({ accent_color: value });
-              }
-            }
-          ],
-          borderables: [],
-          fontEditable: {
-            get: () => config.font_family || defaultConfig.font_family,
-            set: (value) => {
-              config.font_family = value;
-              window.elementSdk.setConfig({ font_family: value });
-            }
-          },
-          fontSizeable: {
-            get: () => config.font_size || defaultConfig.font_size,
-            set: (value) => {
-              config.font_size = value;
-              window.elementSdk.setConfig({ font_size: value });
-            }
-          }
-        }),
-        mapToEditPanelValues: (config) => new Map([
-          ["timeline_title", config.timeline_title || defaultConfig.timeline_title],
-          ["timeline_subtitle", config.timeline_subtitle || defaultConfig.timeline_subtitle]
-        ])
-      });
-    }
-
-    document.addEventListener('DOMContentLoaded', () => {
-      if (window.elementSdk && window.elementSdk.config) {
-        onConfigChange(window.elementSdk.config);
-      } else {
-        onConfigChange(defaultConfig);
-      }
-    });
   </script>
- <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'99cd2d9062a330cc',t:'MTc2Mjg1NzY5NC4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
+ </body>
 </html>
